viral immunity and import/export of tab-separated values.

---
** Support for `magic cookie' standout modes has been removed.
Emacs will still work on terminals that require magic cookies in order
to use standout mode, however they will not be able to display
mode-lines in inverse-video.

---
** The obsolete C mode (c-mode.el) has been removed to avoid problems
with Custom.


* Lisp Changes in Emacs 21.4

** New variables `gc-elapsed' and `gcs-done' provide extra information
on garbage collection.

** New function `decode-coding-region-as-inserted-from-file' decodes a
region as if it is read from a file without decoding.

** New function `optimize-char-coding-system-table' can be called
after making changes to `char-coding-system-table'.

** New function `langinfo' accesses locale information.

** `save-selected-window' now saves and restores the selected window
of every frame.  This way, it restores everything that can be changed
by calling `select-window'.

** `easy-menu-define' now allows you to use nil for the symbol name
if you don't need to give the menu a name.  If you install the menu
into other keymaps right away (MAPS is non-nil), it usually doesn't
need to have a name.

** Byte compiler changes:

*** `(featurep 'xemacs)' is treated by the compiler as nil.  This
helps to avoid noisy compiler warnings in code meant to run under both
Emacs and XEmacs and may sometimes make the result significantly more
efficient.  Since byte code from recent versions of XEmacs won't
generally run in Emacs and vice versa, this optimization doesn't lose
you anything.

*** You can avoid warnings for possibly-undefined symbols with a
simple convention that the compiler understands.  (This is mostly
useful in code meant to be portable to different Emacs versions.)
Write forms like the following, or code that macroexpands into such
forms:

  (if (fboundp 'foo) <then> <else>)
  (if (boundp 'foo) <then> <else)

In the first case, using `foo' as a function inside the <then> form